--- a/files/html/0003-snivy/index.html
+++ b/files/html/0003-snivy/index.html
@@ -76,7 +76,7 @@
   </div>
   <div class="flex">
     <div class="btis">
-      <button class="buttons" type="button">
+      <button class="buttons" type="button" onclick="location.href='https://youtu.be/s6NzGYGefIc?t=7'">
         ツタージャ
       </button>
     </div>
