--- a/files/html/0004-audio/index.html
+++ b/files/html/0004-audio/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <audio controls>
-      <source src="data/file/audio/y2mate.com - UNICORN.mp3" type="audio/mpeg">
+      <source src="/data/file/audio/y2mate.com - UNICORN.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
   </body>
